# allocator_cpp_otus_job3

./: CMakeLists.txt  README.md  alloc.cpp  alloc.h  linked_list.h  main.cpp
.github/workflows/: release.yml
